--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/underscore/undersource.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script>
       // YOU DO NOT NEED TO EDIT THIS CODE
@@ -55,24 +55,22 @@
             </ul>
           </li>
         </ul>
-        <form class="navbar-form navbar-left">
+        <div class="navbar-form navbar-left">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="room">
           </div>
           <button type="submit" class="btn btn-default">Create a room</button>
-        </form>
+        </div>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
-      <form>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="type here">
-        </div>
-        <button type="submit" class="btn btn-default">Send</button>
-      </form>
+      <div class="form-group text">
+        <input type="text" class="form-control" placeholder="type here">
+      </div>
+      <button type="submit" class="btn btn-default send">Send</button>
     </div>
     <div id="chats"></div>
     <nav class="navbar navbar-default">
