--- a/client/index.html
+++ b/client/index.html
@@ -44,22 +44,15 @@
         <ul class="nav navbar-nav">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Choose a room <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+            <ul id="roomSelect" class="dropdown-menu" selectedIndex="0">
             </ul>
           </li>
         </ul>
         <div class="navbar-form navbar-left">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="room">
-          </div>
-          <button type="submit" class="btn btn-default">Create a room</button>
+          <form class="form-group">
+            <input type="text" class="newRoom form-control" placeholder="room">
+            <button type="submit" id="createRoom" class="btn btn-default">Create a room</button>
+          </form>
         </div>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -67,12 +60,14 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
-      <div class="form-group text">
-        <input type="text" class="form-control" placeholder="type here">
-      </div>
-      <button type="submit" class="btn btn-default send">Send</button>
+      <form>
+        <div class="form-group text">
+          <input type="text" id="message" class="form-control" placeholder="type here">
+        </div>
+        <button type="submit" id="send" class="btn btn-default submit">Send</button>
+      </form>
     </div>
-    <div id="chats"></div>
+    <div id="chats" class="chats"></div>
     <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
