--- a/client/index.html
+++ b/client/index.html
@@ -43,15 +43,15 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Choose a room <span class="caret"></span></a>
-            <ul id="roomSelect" class="dropdown-menu" selectedIndex="0">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Choose a Room<span class="caret"></span></a>
+            <ul id="roomSelect" class="dropdown-menu">
             </ul>
           </li>
         </ul>
         <div class="navbar-form navbar-left">
-          <form class="form-group">
+          <form id="createRoom" class="form-group">
             <input type="text" class="newRoom form-control" placeholder="room">
-            <button type="submit" id="createRoom" class="btn btn-default">Create a room</button>
+            <button type="submit" class="btn btn-default">Create a room</button>
           </form>
         </div>
       </div><!-- /.navbar-collapse -->
@@ -60,11 +60,11 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
-      <form>
+      <form id="send" class="submit">
         <div class="form-group text">
           <input type="text" id="message" class="form-control" placeholder="type here">
         </div>
-        <button type="submit" id="send" class="btn btn-default submit">Send</button>
+        <button type="submit" class="btn btn-default">Send</button>
       </form>
     </div>
     <div id="chats" class="chats"></div>
